# tensorrt_cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  main_build.cpp  main_inference_image.cpp  main_inference_video.cpp
include/: tensorrt_inference.h  utils.h
src/: tensorrt_inference.cpp
